// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`playground > app/components/foo-bar.vue > unimport > references 1`] = `
[
  {
    "fileName": "app/components/foo-bar.vue",
    "textSpan": {
      "length": 6,
      "start": 36,
    },
  },
  {
    "fileName": "app/components/foo-bar.vue",
    "textSpan": {
      "length": 6,
      "start": 73,
    },
  },
  {
    "fileName": "app/pages/testify.vue",
    "textSpan": {
      "length": 6,
      "start": 1718,
    },
  },
  {
    "fileName": "app/pages/testify.vue",
    "textSpan": {
      "length": 12,
      "start": 1731,
    },
  },
]
`;

exports[`playground > app/pages/about.vue > layout-slots > definition 1`] = `
[
  {
    "fileName": "app/layouts/center.vue",
    "textSpan": {
      "length": 3,
      "start": 47,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > auto imports > definition 1`] = `
[
  {
    "fileName": "app/utils/index.ts",
    "textSpan": {
      "length": 3,
      "start": 63,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > import glob > definition 1`] = `
[
  {
    "fileName": "app/assets/maestrale.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "app/assets/libeccio.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > import glob > definition 2`] = `
[
  {
    "fileName": "app/assets/maestrale.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "app/assets/libeccio.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > nitro routes > definition 1`] = `
[
  {
    "fileName": "server/routes/sitemap.post.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "server/routes/sitemap.get.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > nitro routes > definition 2`] = `
[
  {
    "fileName": "public/fallback.json",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > nitro routes > definition 3`] = `
[
  {
    "fileName": "server/api/foo.get.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > nitro routes > definition 4`] = `
[
  {
    "fileName": "server/api/foo.post.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > page meta > definition 1`] = `
[
  {
    "fileName": "app/layouts/center.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > page meta > definition 2`] = `
[
  {
    "fileName": "app/middleware/auth.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > runtime config > definition 1`] = `
[
  {
    "fileName": "layers/archer/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 70,
    },
  },
  {
    "fileName": "layers/berserker/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 70,
    },
  },
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 37,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > runtime config > definition 2`] = `
[
  {
    "fileName": "layers/berserker/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 84,
    },
  },
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 49,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > runtime config > definition 3`] = `
[
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 61,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > runtime config > definition 4`] = `
[
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 5,
      "start": 90,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > typed pages > definition 1`] = `
[
  {
    "fileName": "app/pages/about.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > typed pages > definition 2`] = `
[
  {
    "fileName": "app/pages/about/contact.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/pages/testify.vue > typed pages > definition 3`] = `
[
  {
    "fileName": "app/pages/about.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/utils/index.ts > auto imports > references 1`] = `
[
  {
    "fileName": "app/pages/testify.vue",
    "textSpan": {
      "length": 3,
      "start": 705,
    },
  },
]
`;
